--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -260,12 +260,29 @@
                 android:shadowRadius="50"
                 android:drawableLeft="@drawable/timer_btn_icon"
                 android:text="@string/start"
-                android:layout_marginBottom="15dp"
+
                 android:textColor="@color/black"
                 android:textSize="15dp"
                 android:textStyle="bold"
 
                  />
+            <Button
+                android:id="@+id/btnStartInCardOffline"
+                android:layout_width="170dp"
+                android:layout_height="60dp"
+                android:backgroundTint="@color/greenTime"
+                android:layout_marginTop="5dp"
+                android:shadowColor="@color/white"
+                android:shadowRadius="50"
+                android:drawableLeft="@drawable/ic_wifi_strength_off"
+                android:text="@string/goOffline"
+                android:visibility="gone"
+                android:layout_marginBottom="15dp"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:textStyle="bold"
+
+                />
             <TextView
                 android:id="@+id/textErrorInCard"
                 android:layout_width="wrap_content"
