--- a/app/src/main/res/layout/activity_create_custom_commands.xml
+++ b/app/src/main/res/layout/activity_create_custom_commands.xml
@@ -214,6 +214,7 @@
 
         <com.google.android.gms.ads.AdView
             android:id="@+id/adViewCreateCommandsActivity"
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
